[gd_scene load_steps=9 format=3 uid="uid://bfqclggbcq523"]

[ext_resource type="Texture2D" uid="uid://croxii3shk4gn" path="res://addons/kenney_prototype_textures/dark/texture_09.png" id="1_2q6dc"]
[ext_resource type="Script" uid="uid://dohfnm1gxi278" path="res://scripts/level.gd" id="1_w8frs"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_f2txt"]

[sub_resource type="Sky" id="Sky_1ainy"]
sky_material = SubResource("ProceduralSkyMaterial_f2txt")

[sub_resource type="Environment" id="Environment_n6hdu"]
background_mode = 2
sky = SubResource("Sky_1ainy")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vonw3"]
albedo_texture = ExtResource("1_2q6dc")
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_oi3di"]
material = SubResource("StandardMaterial3D_vonw3")
size = Vector2(100, 100)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_0b4ue"]
data = PackedVector3Array(50, 0, 50, -50, 0, 50, 50, 0, -50, -50, 0, 50, -50, 0, -50, 50, 0, -50)

[node name="Level" type="Node3D"]
script = ExtResource("1_w8frs")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_n6hdu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.982117, -0.171599, 0.077462, 0, 0.411435, 0.911439, -0.188273, -0.89514, 0.404077, 0, 0, 0)

[node name="Floor" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_oi3di")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_0b4ue")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 441.0
offset_top = 223.0
offset_right = -441.0
offset_bottom = -223.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter IP Address"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://drnsgx4hsxlw8")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
